--- a/wireless/802.1x认证.md
+++ b/wireless/802.1x认证.md
@@ -15,9 +15,80 @@
 	6.设备端口打开
 	7.客户端正常通信
 
+
+## resolution
+
+最后的解决方案,采用寰创提供的已经加载的服务的redhat,在wm中加载虚拟机，在虚拟机中执行修改ip添加ac的网元码和lan口的ip;添加用户。客户端可以通过设置无线的设置添加无线网络，实现了802.1x验证。
+
+- 基础环境  设置  ac的lan3口ip为 192.76.104.6   网元信码为 0000.0000.000.00.460 
+- 本机的ip为 192.76.104.3    本机的虚拟的ip 为 192.76.104.1
+- redhat 设置 (服务器设置好采取挂起的状态)
+
+```
+cd /usr/local/ps
+ifconfig eth0
+ifconfig eth0 172.76.104.1 netmask 255.255.255.0
+route -n
+vi ps_ac.conf
+注释掉其余部分，添加0000.0000.000.00.460 172.76.104.6
+cat ps_ac.conf
+./add_ac.sh 0000.0000.000.00.460 172.76.104.6
+cat ps_ac.conf
+./add_user.sh 用户名   密码
+```
+
+图解
+
+![图一](./img for 802.1x认证/redHat配置图1.png)
+
+
+
+![redHat配置图2](./img for 802.1x认证/redHat配置图2.png)
+
+
+
+
+
+![redHat配置图3](./img for 802.1x认证/redHat配置图3.png)
+
+
+
+- 客户端连接wifi设置
+
+  无线管理中添加需要连接的无线网络名
+
+  ​
+
+  ![图一](./img for 802.1x认证/客户端连接wifi设置图1.png)
+
+  ​
+
+  ![图一](./img for 802.1x认证/客户端连接wifi设置图2.png)
+
+  ​
+
+  ​
+
+  ![图一](./img for 802.1x认证/客户端连接wifi设置图3.png)
+
+  ​
+
+  ![图一](./img for 802.1x认证/客户端连接wifi设置图4.png)
+
+  ​
+
+  ​
+
 ##refs
+
 [http://blog.csdn.net/lycb_gz/article/details/17523603](http://blog.csdn.net/lycb_gz/article/details/17523603)
 
 [http://blog.csdn.net/happyfyshan/article/details/2332325](http://blog.csdn.net/happyfyshan/article/details/2332325)
-* * *
-last update 2016-10-08
+
+
+
+------
+
+update 2016-10-08
+
+last update 2016-10-13
