Signed-off-by: lakeoffaith <905663280@qq.com>

--- a/wireless/802.1x认证.md
+++ b/wireless/802.1x认证.md
@@ -20,7 +20,7 @@
 
 最后的解决方案,采用寰创提供的已经加载的服务的redhat,在wm中加载虚拟机，在虚拟机中执行修改ip添加ac的网元码和lan口的ip;添加用户。客户端可以通过设置无线的设置添加无线网络，实现了802.1x验证。
 
-- 基础环境  设置  ac的lan3口ip为 192.76.104.6   网元信码为 0000.0000.000.00.460 
+- 基础环境  设置  ac的lan3口ip为 192.76.104.6   AC网元编码为 0000.0000.000.00.460(每一台AC的网元编码不同,登录AC进行查看)
 - 本机的ip为 192.76.104.3    本机的虚拟的ip 为 192.76.104.1
 - redhat 设置 (服务器设置好采取挂起的状态)
 
