--- a/wireless/802.1x认证.md
+++ b/wireless/802.1x认证.md
@@ -59,25 +59,70 @@ cat ps_ac.conf
 
   ​
 
-  ![图一](./img for 802.1x认证/客户端连接wifi设置图1.png)
-
-  ​
-
-  ![图一](./img for 802.1x认证/客户端连接wifi设置图2.png)
+  ![图一](./img for 802.1x认证/电脑客户端的配置/1.png)
 
   ​
 
   ​
 
-  ![图一](./img for 802.1x认证/客户端连接wifi设置图3.png)
-
-  ​
-
-  ![图一](./img for 802.1x认证/客户端连接wifi设置图4.png)
+  ![图一](./img for 802.1x认证/电脑客户端的配置/2.png)
 
   ​
 
   ​
+
+  ​
+
+  ​
+
+  ![图一](./img for 802.1x认证/电脑客户端的配置/3.png)
+
+  ​
+
+  ​
+
+  ​
+
+  ![图一](./img for 802.1x认证/电脑客户端的配置/4.png)
+
+  ​
+
+  ​
+
+  ![图一](./img for 802.1x认证/电脑客户端的配置/5.png)
+
+  ​
+
+  ​
+
+  ​
+
+  ![图一](./img for 802.1x认证/电脑客户端的配置/6.png)
+
+
+
+
+
+
+![图一](./img for 802.1x认证/电脑客户端的配置/7 连接SSID成功，及SSID信息.png)
+
+
+
+
+
+## atention
+
+关闭电脑防火墙，关闭一切电脑安全软件。
+
+
+
+## other
+
+vi 编辑器使用。按Ins键进入编辑。编辑完成后退出保持 按ESC 后:wq! 保持后退出。
+
+:q!未不保存再退出。
+
+cat  filename 为查看命令。
 
 ##refs
 
