Signed-off-by: lakeoffaith <905663280@qq.com>

--- a/医疗/医保卡怎么绑定支付平台.md
+++ b/医疗/医保卡怎么绑定支付平台.md
@@ -1,5 +1,8 @@
 ## 医保卡怎么绑定支付平台
 
-只有绑定社保卡才能使用医保移动支付吗
+> 只有绑定社保卡才能使用医保移动支付吗
 
-　　答：为了保障医保基金的安全，在通过支付平台绑定社保卡的环节中，需要进行银行端+社保端双实名认证，确保参保人医保账户不被他人盗用，因此参保人需办理加载金融功能的社会保障卡才能体验医保的移动支付。绑定银行账户主要用于实名认证，医疗费用中的自费部分不强制使用该金融账户进行支付。
+```
+为了保障医保基金的安全，在通过支付平台绑定社保卡的环节中，需要进行银行端+社保端双实名认证，确保参保人医保账户不被他人盗用，因此参保人需办理加载金融功能的社会保障卡才能体验医保的移动支付。绑定银行账户主要用于实名认证，医疗费用中的自费部分不强制使用该金融账户进行支付。
+```
+
